# langwich

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: langwich.md
archive/: __init__.py  generator.py  import_data.py
archive/db/: __init__.py  manager.py
archive/exercises/: base.py  reading.py  text_summary.py  translation.py
archive/mining/: domain_tagger.py
archive/mining/nlp/: __init__.py  phrase_extractor.py  tokenizer.py
archive/mining/sources/: __init__.py  base.py  openalex.py  youtube.py
archive/rendering/: __init__.py
data/: example_travel_en_de.json
docs/: architecture.md  class_diagram.mermaid  exercise-types-brainstorm.md  process_diagram.mermaid
examples/: coffee_en_de.json  film_de_fr.json
scripts/: render_diagrams.py
src/langwich/: __init__.py  cli.py  config.py  generate.py  generator.py  graph.py  import_data.py  render.py  text.py
src/langwich/db/: manager.py  models.py
src/langwich/exercises/: __init__.py  creative_writing.py  drawing_task.py  fill_blanks.py  reading.py  synonyms.py  text_summary.py  translation.py  vocab_matching.py  youtube_task.py
src/langwich/mining/: __init__.py  pipeline.py
src/langwich/mining/nlp/: cefr_classifier.py
src/langwich/mining/sources/: arxiv.py  wikipedia.py
src/langwich/paths/: __init__.py  defaults.py  template.py
src/langwich/rendering/: components.py  pdf_renderer.py  styles.py
