[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "langwich"
version = "0.1.0"
description = "Automated language learning worksheet generator for e-paper and print"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "langwich contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "reportlab>=4.1",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
mining = [
    "spacy>=3.7",
    "httpx>=0.27",
    "openai>=1.12",
    "youtube-transcript-api>=0.6",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "feedparser>=6.0",
    "nltk>=3.8",
]
all = ["langwich[mining]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
langwich = "langwich.generator:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
